<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="non_subscriber_ultimate_protection">Ultimate Protection: OFF</string>
    <string name="non_subscriber_ultimate_protection_desc">You are browsing without ultimate protection and ad blocker.</string>
    <string name="non_subscriber_ultimate_protection_button">Turn On</string>
    <string name="bond_dashboard_clear_dialog_title">Clear Dashboard Data?</string>
    <string name="bond_dashboard_clear_dialog_message">This will delete all your dashboard data and cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="button_ok">Clear</string>
    <string name="bond_dashboard_ultimate_protection">Ultimate Protection:</string>
    <string name="bond_dashboard_contols_pause">Pause</string>
    <string name="bond_dashboard_contols_vpn">VPN</string>
    <string name="bond_dashboard_contols_clear">Clear</string>
    <string name="bond_dashboard_contols_on">ON</string>
    <string name="bond_dashboard_contols_off">OFF</string>
    <string name="bond_dashboard_today_title">Today</string>
    <string name="bond_dashboard_week_title">Last 7 Days</string>
    <string name="bond_dashboard_time_saved_title">Time Saved</string>
    <string name="bond_dashboard_time_saved_description">for things that really matter</string>
    <string name="bond_dashboard_ads_blocked_title">Ads Blocked</string>
    <string name="bond_dashboard_ads_blocked_description">Enjoy clutter-free browsing</string>
    <string name="bond_dashboard_data_saved_title">Data Volume Saved</string>
    <string name="bond_dashboard_data_saved_description">No data wasted on ads</string>
    <string name="bond_dashboard_phishing_protection_title">Websites checked</string>
    <string name="bond_dashboard_phishing_protection_description">prevents identity theft by fraudulent websites</string>
    <string name="bond_dashboard_tracking_companies_unit">COMPANIES</string>
    <string name="bond_dashboard_tracking_companies_title">Data Collectors Detained</string>
    <string name="bond_dashboard_tracking_companies_description">Number of tracker companies that tried to spy on you</string>
    <string name="bond_dashboard_units_seconds">SEC</string>
    <string name="bond_dashboard_units_minutes">"MIN"</string>
    <string name="bond_dashboard_units_hours">"HRS"</string>
    <string name="bond_dashboard_units_days">DAYS"</string>
    <string name="bond_dashboard_units_kb">"KB"</string>
    <string name="bond_dashboard_units_mb">"MB"</string>
    <string name="bond_dashboard_units_gb">"GB"</string>
    <string name="bond_dashboard_ultimate_protection_pause_dialog_negative_button">Cancel</string>
    <string name="bond_dashboard_ultimate_protection_pause_dialog">Pause Ultimate Protection on %1$s</string>
    <string name="bond_dashboard_ultimate_protection_pause_dialog_positive_button">Pause</string>
    <string name="bond_dashboard_contols_start">Start</string>
    <string name="bond_dashboard_protection_off">Protection is off</string>
    <string name="reset_statistics">Reset statistics</string>
    <string name="url_bar_search_hint">Search or enter URL</string>
    <string name="search_hint">Search or enter URL</string>
    <string name="app_name">Lumen Browser</string>
    <string name="shared_using">Shared with Lumen for Android</string>
    <string name="optimized_block_ads_description">The Lumen Ad Blocker is in beta at the moment. The final version will provide the following options: Allow Fair Ads (default setting), Block All Ads, Allow All Ads. More https://cliqz.com/whycliqz/adblocking</string>
    <string name="antiphishing_message">Lumen has blocked access to %1$s because it has been reported as a phishing website. Phishing websites disguise as other sites you may trust in order to trick you into disclosing your login, password or other sensitive information. [Learn more|https://cliqz.com/en/whycliqz/anti-phishing]</string>
    <string name="rate_us">Rate Lumen Browser</string>
    <string name="summary_adblock_data">Please note: Lumen Browser has to download some data packages first, before the ad-blocker works efficiently. For this, the app must be connected to Wi-Fi.</string>
    <string name="tips_and_tricks">Get the best out of Lumen</string>
    <string name="msg_pairing_instructions_dialog">Open Lumen Browser on your computer (or get it from cliqz.com).</string>
    <string name="pairing_information">Connect Lumen on your mobile device with Lumen on your computer. This will allow you to send tabs between your desktop and your mobile device. You can also directly download videos from your desktop browser to your mobile device.</string>
    <string name="request_location_access">Allow Lumen Browser to access location information</string>
    <string name="msg_new_icon">Hey, the Lumen logo is now blue. Check out the new version of the app!</string>
    <string name="send_tab_no_connection_error_msg">You are not connected to any Lumen Browser for Desktop. Go to the \'Connect\' menu to add a new connection.</string>
    <string name="share_card_email_subject">I discovered this in the Lumen Browser</string>
    <string name="settings_category_tab">Lumen Tab</string>
    <string name="clear_data_summary">Lumen will automatically clear your data whenever you select \"Exit\" from the main menu.</string>
    <string name="default_browser_title">Lumen as Default Browser</string>
    <string name="default_browser_message">You seem to like using Lumen. Do you want to make it your default browser?</string>
    <string name="save_password_text">Do you want Lumen to save your password for this site?</string>
    <string name="tab_default_url" translatable="false">Lumen Tab</string>
    <string name="eula_text">The Lumen for Android browser is built upon the &lt;a href=https://github.com/anthonycr/Lightning-Browser/blob/dev/LICENSE&gt;Lightning Browser open source project&lt;/a&gt; and is made available to you under the terms of the &lt;a href=https://www.mozilla.org/en-US/MPL/2.0/&gt;Mozilla Public License 2.0&lt;/a&gt; a free software license, which gives you the right to run the program for any purpose, to study how it works, to give copies to your friends and to modify it to meet your needs better. There is no separate End User License Agreement (EULA).</string>
    <string name="welcome_message">Welcome to Lumen!</string>
    <string name="agree_privacy_policy_message">By using this application, you agree to the &lt;font color=\'#00aef0\'>Lumen Privacy Policy &lt;/font></string>
    <string name="privacy_policy_title">Privacy Policy - Lumen</string>
    <string name="send_usage_data_summary">Help us improve your browsing experience. Lumen collects strictly anonymous usage data. At no occasion is any PII collected.</string>
    <string name="user_sentiment_survey_first_line_msg" tools:ignore="MissingTranslation">Hello! We’d like to know your opinion about the Lumen Browser. i</string>
    <string name="start_tab_welcome_message">Welcome to Lumen!</string>
    <string name="trial_over_upgrade_lumen_title">Your Trial is Over</string>
    <string name="trial_over_upgrade_lumen_description">You can still use Lumen, but without ultimate protection and VPN. Or go premium.</string>
    <string name="trial_over_upgrade_lumen_dismiss">No, Thanks</string>
    <string name="trial_over_upgrade_lumen_proceed">Upgrade</string>
    <plurals name="trial_period_upgrade_description">
        <item quantity="one">1 more day in the Test-Version</item>
        <item quantity="other">%d more days in the Test-Version</item>
    </plurals>
    <string name="upgrade_button">Upgrade</string>
    <string name="made_in_germany">Made in Germany</string>
    <string name="learn_more_btn">LEARN MORE</string>
    <string name="unlock_vpn_dialog_title">VPN PROTECTION</string>
    <string name="unlock_vpn_dialog_description">Unlock the VPN feature to get the best out of Lumen.</string>
    <string name="unlock_vpn_dialog_negative_btn">No, thanks</string>
    <string name="unlock_vpn_dialog_positive_btn">@string/learn_more</string>
    <string name="learn_more_link">Unlock the VPN feature to get the best out of Lumen. LEARN MORE</string>
    <string name="vpn_feature_one">Protection from hackers</string>
    <string name="vpn_feature_two">Hide your location</string>
    <string name="vpn_cta_disabled">@string/unlock_vpn_dialog_description</string>
    <string name="vpn_cta_enabled">VPN is short for Virtual Private Network.</string>
    <string name="vpn_notification_title">Lumen Browser - VPN</string>
    <string name="vpn_notification_content">You are connected to %s</string>
    <string name="vpn_action_connect">Connect</string>
    <string name="vpn_action_disconnect">Disconnect</string>
    <string name="vpn_choose_location">Choose your virtual location:</string>
    <string name="vpn_country_name_at">Austria</string>
    <string name="vpn_country_name_ba">Bosnia</string>
    <string name="vpn_country_name_bg">Bulgaria</string>
    <string name="vpn_country_name_ca">Canada</string>
    <string name="vpn_country_name_de">Germany</string>
    <string name="vpn_country_name_es">Spain</string>
    <string name="vpn_country_name_fr">France</string>
    <string name="vpn_country_name_gr">Greece</string>
    <string name="vpn_country_name_hr">Croatia</string>
    <string name="vpn_country_name_hu">Hungary</string>
    <string name="vpn_country_name_in">India</string>
    <string name="vpn_country_name_it">Italy</string>
    <string name="vpn_country_name_nl">Netherlands</string>
    <string name="vpn_country_name_pl">Poland</string>
    <string name="vpn_country_name_pt">Portugal</string>
    <string name="vpn_country_name_ro">Romania</string>
    <string name="vpn_country_name_rs">Serbia</string>
    <string name="vpn_country_name_tr">Turkey</string>
    <string name="vpn_country_name_ua">Ukraine</string>
    <string name="vpn_country_name_uk">UK</string>
    <string name="vpn_country_name_us">USA</string>
    <string name="vpn_country_name_vn">Vietnam</string>
    <string name="vpn_country_name_unknown">Country Unknown</string>
    <string name="button_buy_subscription">Subscribe</string>
    <string name="button_upgrade_subscription">Upgrade</string>
    <string name="text_subscribed">Subscribed</string>
    <string name="subscription_product_row_highlighted">Best offer\nLimited Time Only</string>
    <string name="per_month_text">%1$s / MONTH</string>
    <string name="purchase_message_complete">Purchase complete!</string>
    <string name="restore_subscription">Restore Subscription</string>
    <string name="restore_subscription_dialog_title">Restore subscriptions?</string>
    <string name="restore_subscription_dialog_desc">You already have a subscription for package %1$s </string>
    <string name="restore_subscription_dialog_positive_btn">Restore</string>
    <string name="restore_subscription_error_msg">Nothing to restore</string>
    <string name="restore_subscription_success">Subscription restored</string>
    <string name="action_incognito">New Private Tab</string>
    <string name="open_in_incognito_tab">Open in new Private Tab</string>
    <string name="switched_to_forget">Automatic Private Tab enabled</string>
    <string name="open_link_forget_tab">Open link in Private Tab</string>
    <string name="open_image_forget_tab">Open image in Private Tab</string>
    <string name="incognito_tab_title">Private Tab</string>
    <string name="incognito_tab_description">You are browsing in Private Mode: websites you visit in this mode will not be saved in your history, and local data, including cookies, will not be stored.</string>
    <string name="auto_forget_tab">Automatic Private Tab</string>
    <string name="lumen_onboarding_text_1">Ultimate Protection online</string>
    <string name="lumen_onboarding_text_2">Safe and sound on the go</string>
    <string name="lumen_onboarding_button">LET\'S GO</string>
</resources>